<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                          xmlns:app="http://schemas.android.com/apk/res-auto"
                                          android:layout_width="match_parent"
                                          android:layout_height="match_parent"
                                          xmlns:tools="http://schemas.android.com/tools"
                                          android:paddingEnd="24dp"
                                          android:paddingStart="24dp"
                                          android:paddingTop="16dp"
                                          app:alignContent="flex_start"
                                          app:dividerDrawableVertical="?android:attr/dividerVertical"
                                          app:flexWrap="wrap"
                                          app:showDividerHorizontal="none"
                                          app:showDividerVertical="middle">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/bottom_bar"
        android:elevation="2dp"
        android:orientation="vertical"
        app:layout_flexGrow="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_margin="8dp"
            android:text="@string/new_setlist"
            android:focusableInTouchMode="true"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/new_setlist_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text|textCapWords"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                tools:text="Setlist Name"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/new_setlist"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/start_new_setlist"/>

    </LinearLayout>

    <Button
        android:id="@+id/edit_shortlists"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:drawableTint="?android:textColorPrimary"
        android:drawableTop="@drawable/ic_tags"
        android:text="@string/edit_tags"
        app:layout_flexGrow="1"
        app:layout_wrapBefore="true"/>

    <Button
        android:id="@+id/edit_metadata"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:drawableTint="?android:textColorPrimary"
        android:drawableTop="@drawable/ic_queue_music"
        android:text="@string/edit_metadata"
        app:layout_flexGrow="1"/>

    <Button
        android:id="@+id/sound_check"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:drawableTint="?android:textColorPrimary"
        android:drawableTop="@drawable/ic_sound_check"
        android:text="@string/sound_check"
        app:layout_flexGrow="1"/>
</com.google.android.flexbox.FlexboxLayout>